# FraudMiner

./: README.md
GraphGenerators/: graph_generator.rb  sorted_graph_generator.rb
JsonGraphGenerator/: graph_generator.rb  (+1 more)
Test-Type-01/: CMakeLists.txt  README.md
Test-Type-01/include/comm/: Endian.hpp
Test-Type-01/include/graph/: NamelessGraph.h
Test-Type-01/src/comm/: InetAddress.cpp  SocketOpts.cpp
Test-Type-01/src/native/: CMakeLists.txt  GraphLoader.cpp  NativeFile.cpp
Test-Type-01/test/: CMakeLists.txt
Test-Type-01/test/comm/Socket/: CMakeLists.txt  SocketTest.cpp
Test-Type-01/test/graph/NamelessGraph/: NamelessGraphTest.cpp
Test-Type-01/test/native/: CMakeLists.txt
Test-Type-01/test/native/GraphLoader/: GraphLoaderTest.cpp
Test-Type-01/test/native/NativeFile/: CMakeLists.txt  NativeFileTest.cpp
Test-Type-02/: CMakeLists.txt  README.md
Test-Type-02/conf/: core
Test-Type-02/headers/comm/: Epoller.h  Socket.h
Test-Type-02/headers/supports/: ConfigurationLoader.h
Test-Type-02/src/: CMakeLists.txt
Test-Type-02/src/comm/: CMakeLists.txt  Epoller.cpp  Socket.cpp
Test-Type-02/src/supports/: CMakeLists.txt  ConfigurationLoader.cpp
Test-Type-02/test-ext/tcp_clients/: TcpClient.py  batch_test.sh
Test-Type-02/test/comm/: CMakeLists.txt
Test-Type-02/test/comm/EpollerTest/: CMakeLists.txt  epoller_test_main.cpp
Test-Type-02/test/comm/SocketTest/: CMakeLists.txt  socket_test_main.cpp
Test-Type-02/test/supports/: CMakeLists.txt
Test-Type-02/test/supports/ConfigurationLoaderTest/: CMakeLists.txt  configuration_loader_test_main.cpp
(+49 files in other folders)
